// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validate failed should throw an error if a source is ConcatSource 1`] = `
"/home/dummy/foo.js
  2:11  Unexpected token (2:11)
        var foo = () => console.log(123);

ECMAVersionValidatorPlugin has detected incompatible syntax with ES5.

"
`;

exports[`validate failed should throw an error includes all files having any error 1`] = `
"/home/dummy/foo.js
  2:11  Unexpected token (2:11)
        var foo = () => console.log(123);
/home/dummy/bar.js
  2:0  The keyword 'class' is reserved (2:0)
       class Bar {}

ECMAVersionValidatorPlugin has detected incompatible syntax with ES5.

"
`;
